--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ sysinfo.txt
 *.log
 *.log
 UserSettings/EditorUserSettings.asset
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
+Assets/Plugins/Sirenix/Demos/Sample - RPG Editor.unitypackage.meta
+Assets/Plugins/Sirenix/Demos/Editor Windows.unitypackage.meta
+Assets/Plugins/Sirenix/Demos/Custom Drawers.unitypackage.meta
+Assets/Plugins/Sirenix/Demos/Custom Attribute Processors.unitypackage.meta
